--- a/style/style.css
+++ b/style/style.css
@@ -12,12 +12,7 @@ ol {
 a {
     text-decoration: none;
 }
-h1{
+h1,h2{
     text-align: center;
     margin-top: 100px;
-}
-h2{
-    text-align: center;
-    top: 100px;
-    
 }
